added Banner Component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,4 +16,20 @@
     @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s]
     hover:text-[#b3b3b3];
   }
+
+  .bannerButton {
+    @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
+}
+
+@layer utilities {
+  @variants responsive {
+    .text-shadow-md {
+      text-shadow: 0 4px 8px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.08);
+    }
+    .text-shadow-lg {
+      text-shadow: 0 15px 30px rgba(0, 0, 0, 0.11),
+        0 5px 15px rgba(0, 0, 0, 0.08);
+    }
+  }
 }
