--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,11 @@
   .tableDataFeature {
     @apply w-[calc(100%/3)] p-2.5 text-center md:w-[calc(60%/3)] md:p-3.5;
   }
+
+  /* Account */
+  .plan {
+    @apply mt-6 grid grid-cols-1 gap-x-4 border px-4 py-4 md:grid-cols-4 md:border-x-0 md:border-t md:border-b-0 md:px-0;
+  }
 }
 
 @layer utilities {
